# ibd-tp2

./: .gitignore  README.md  check.py  concat.py  create_db.sql  create_final_tables.sql  explore_data.sql  joins.sql  obitos.py  pyproject.toml  vacinas.py
