[project]
name = "tp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "seleniumbase>=4.39.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupynium>=0.2.6",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyter-console>=6.6.3",
    "jupytext>=1.17.2",
    "nbclassic>=1.3.1",
    "nbformat>=5.10.4",
    "notebook>=7.4.3",
    "pynvim>=0.5.2",
]
